--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="box-container">
         <h2>Welcome to EasyQueue</h2>
         <h4>Please select to continue</h4>
+        <h1>HOY!!!</h1>
 
         <!-- Button for Student -->
         <a href="student.html" class="button-container">
